--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,13 +18,6 @@ body {
 .header {
     margin-bottom: 10px;
 }
-.gal-img {
-    border: 1px solid #444;
-    padding: 0px;
-    cursor: pointer;
-    z-index: 1;
-    position: relative;
-}
 .visits {
     font-size: 9px;
     padding: 5px 0px 5px 0px;
